--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "finance-tracker",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "homepage": "https://github.com/CodieMisiani/Finance-Tracker#readme",
+  "bugs": {
+    "url": "https://github.com/CodieMisiani/Finance-Tracker/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodieMisiani/Finance-Tracker.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
